2009-04-11  H.J. Lu  <hongjiu.lu@intel.com>

PR ld/10047
	* ldfile.c (ldfile_find_command_file): First try raw name.